--- a/robosherlock/CMakeLists.txt
+++ b/robosherlock/CMakeLists.txt
@@ -112,13 +112,13 @@ add_definitions(-DRAPIDJSON_HAS_STDSTRING)
 find_package(rosprolog QUIET)
 option(WITH_ROS_PROLOG "build using json prolog" False)
 
-if(rosprolog_FOUND OR ${WITH_ROS_PROLOG})
-    message(STATUS "rosprolog FOUND")
-    add_definitions(-DWITH_ROS_PROLOG)
-    include_directories(${rosprolog_INCLUDE_DIRS})
-else()
+#if(rosprolog_FOUND OR ${WITH_ROS_PROLOG})
+#    message(STATUS "rosprolog FOUND")
+#    add_definitions(-DWITH_ROS_PROLOG)
+#    include_directories(${rosprolog_INCLUDE_DIRS})
+#else()
     message(STATUS "rosprolog NOT FOUND. using knowrob as the knowledge engine will not be possible")
-endif()
+#endif()
 
 find_package(yaml-cpp REQUIRED)
 if(yaml-cpp_FOUND)
